--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   animate_do: ^3.3.4
+  firebase_core: ^2.28.0
+  firebase_auth: ^4.19.0
 
 dev_dependencies:
   flutter_test:
