add & list transaction

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   animate_do: ^3.3.4
   firebase_core: ^2.28.0
   firebase_auth: ^4.19.0
+  intl: ^0.19.0
+  cloud_firestore: ^4.17.0
+  toastification: ^1.2.1
 
 dev_dependencies:
   flutter_test:
