--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.19.0
   cloud_firestore: ^4.17.0
   toastification: ^1.2.1
+  fl_chart: ^0.67.0
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
