--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   toastification: ^1.2.1
   fl_chart: ^0.67.0
   card_swiper: ^3.0.1
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
